--- a/components/Navbar/Navbar.module.css
+++ b/components/Navbar/Navbar.module.css
@@ -97,21 +97,41 @@
   gap: 16px;
 }
 
-.heroCta {
+.sliding-button1 {
   text-decoration: none;
   color: white;
   display: inline-block;
   position: relative;
-  padding: 7px 20px;
+  padding: 15px 30px;
   border: 1px solid;
   border-image: linear-gradient(180deg, #ff3000, #ed0200, #ff096c, #d50082);
   border-image-slice: 1;
-  margin: 5px 20px;
+  margin: 10px 20px;
   font-family: 'Montserrat', sans-serif;
   text-transform: uppercase;
   overflow: hidden;
-  letter-spacing: 1px;
+  letter-spacing: 2px;
   transition: .8s cubic-bezier(.165, .84, .44, 1);
+}
+.sliding-button1:before {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 0;
+  height: 0;
+  width: 100%;
+  z-index: -1;
+  color: white;
+  background: linear-gradient(180deg, #ff3000, #ed0200, #ff096c, #d50082);
+  transition: .8s cubic-bezier(.165, .84, .44, 1);
+}
+.sliding-button1:hover {
+  background: rgba(255, 255, 255, 0);
+}
+.sliding-button1:hover:before {
+  bottom: 0%;
+  top: auto;
+  height: 100%;
 }
 
 .heroCtasell {
