--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,22 +1,38 @@
 .container {
-  min-height: 99vh;
-  min-width: 96vw;
-  width: 100%;
-  height: 100%;
+ width: 100vh;
+  height: 100vh;
   display: flex;
   flex-direction: column;
   contain: paint;
   align-items: center;
   align-self: center;
   text-align: center;
-  max-width: 100vw;
+  padding: 20px; 
+}
+
+.backgroundContainer {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  overflow: hidden;
 }
 
 .content {
-  max-width: 1204px;
+ overflowY: auto;
+  position: relative;
   width: 100%;
-  margin-left: 16px;
-  margin-right: 16px;
+  height: 100%;
+  maxWidth: 100vw;
+  maxHeight: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  maxWidth: 1450px;
+  max-height: 1450px; /* Укажите максимальную высоту контейнера, при которой появится прокрутка */
+  overflow-y: auto; /* Добавьте вертикальную прокрутку при необходимости */
+  /* Другие стили по вашему усмотрению */
 }
 
 .hero {
