--- a/styles/Buy.module.css
+++ b/styles/Buy.module.css
@@ -6,17 +6,19 @@
   width: 100%;
 }
 .container {
-  min-height: 99vh;
-  min-width: 96vw;
+ overflowY: auto;
+  position: relative;
   width: 100%;
   height: 100%;
+  maxWidth: 100vw;
+  maxHeight: 100vh;
   display: flex;
-  flex-direction: column;
-  contain: paint;
   align-items: center;
-  align-self: center;
-  text-align: center;
-  max-width: 100vw;
+  justify-content: center;
+  maxWidth: 1450px;
+  max-height: 1450px; /* Укажите максимальную высоту контейнера, при которой появится прокрутка */
+  overflow-y: auto; /* Добавьте вертикальную прокрутку при необходимости */
+  /* Другие стили по вашему усмотрению */
 }
 
 .content {
