--- a/components/Navbar/Navbar.module.css
+++ b/components/Navbar/Navbar.module.css
@@ -7,7 +7,7 @@
   top: 0px;
   left: 0px;
   z-index: 3;
-  background-color: transparent !important;
+  background-color: #800000 !important;
   backdrop-filter: blur(5px);
   -webkit-backdrop-filter: blur(5px);
   backdrop-filter: blur(5px);
@@ -23,7 +23,7 @@
   justify-content: space-between;
   width: 98%;
   max-width: 1260px;
-  background-color: #8B4513 !important;
+  background-color: #800000 !important;
 }
 
 .navLeft {
