--- a/components/Navbar/Navbar.module.css
+++ b/components/Navbar/Navbar.module.css
@@ -23,7 +23,7 @@
   justify-content: space-between;
   width: 98%;
   max-width: 1260px;
-  background-color: #800000 !important;
+  background-color: transparent !important;
 }
 
 .navLeft {
