--- a/styles/Buypage.module.css
+++ b/styles/Buypage.module.css
@@ -26,6 +26,8 @@
   height: 100%;
   maxWidth: 100vw;
   maxHeight: 100vh;
+  padding-bottom: 100px;
+  padding-top: 100px;
   display: flex;
   align-items: center;
   justify-content: center;
