--- a/styles/Buypage.module.css
+++ b/styles/Buypage.module.css
@@ -93,6 +93,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding-bottom: 100px;
   max-height: 1150px; /* Укажите максимальную высоту контейнера, при которой появится прокрутка */
   overflow-y: auto;
 }
