--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -113,7 +113,7 @@
 .heroTitleGradient {
   padding-right: 12px;
   font-weight: 700;
-   background: linear-gradient(to right, hsla(0, 0%, 100%, 0.9), hsla(60, 100%, 50%, 0.9));
+   background: #000000 !important;
   -webkit-background-clip: text; /* ƒл€ поддержки веб-кит браузерами, такими как Chrome и Safari */
   color: transparent;
   border-right: 2px solid; /* имитация курсора */
