--- a/styles/guide.module.css
+++ b/styles/guide.module.css
@@ -1,27 +1,44 @@
 .container {
-  min-height: 99vh;
-  min-width: 96vw;
-  width: 100%;
-  height: 100%;
+ width: 100vh;
+  height: 100vh;
   display: flex;
   flex-direction: column;
   contain: paint;
   align-items: center;
   align-self: center;
   text-align: center;
-  max-width: 100vw;
+  padding: 20px; 
+}
+
+.backgroundContainer {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  overflow: hidden;
 }
 
 .content {
-  max-width: 1204px;
+ overflowY: auto;
+  position: relative;
   width: 100%;
-  margin-left: 16px;
-  margin-right: 16px;
+  height: 100%;
+  maxWidth: 100vw;
+  maxHeight: 100vh;
+  padding-top: 400px;
+  padding-bottom: 350px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  maxWidth: 750px;
+  max-height: 1150px; /* Укажите максимальную высоту контейнера, при которой появится прокрутка */
+  overflow-y: auto; /* Добавьте вертикальную прокрутку при необходимости */
+  /* Другие стили по вашему усмотрению */
 }
 
 .hero {
-  padding-bottom: 128px;
-  
+  padding-bottom: 200px;
 }
 
 .heroBackground {
@@ -51,16 +68,6 @@
   opacity: 0.76;
 }
 
-.centerContainer {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  min-height: 100vh; /* This makes the container take up at least the full height of the viewport */
-}
-
-
-
 .heroAssetFrame {
   display: flex;
   justify-content: center;
@@ -85,6 +92,9 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding-bottom: 100px;
+  max-height: 1150px; /* Укажите максимальную высоту контейнера, при которой появится прокрутка */
+  overflow-y: auto;
 }
 
 .heroTitle {
@@ -100,37 +110,41 @@
   letter-spacing: -0.05em;
 }
 
+@keyframes typing {
+  from { width: 0; }
+  to { width: 100%; }
+}
+
 .heroTitleGradient {
   padding-right: 12px;
   font-weight: 700;
+   background: linear-gradient(to right, hsla(0, 0%, 100%, 0.9), hsla(60, 100%, 50%, 0.9));
+  -webkit-background-clip: text; /* ƒл€ поддержки веб-кит браузерами, такими как Chrome и Safari */
+  color: transparent;
+  border-right: 2px solid; /* имитация курсора */
+  white-space: nowrap;
+  overflow: hidden;
+  display: inline-block;
+  animation: typing 4s steps(40, end);
 }
 
 .heroSubtitle {
-  max-width: 840px;
+  max-width: 640px;
   margin: 0 0 40px;
   color: hsla(0, 0%, 100%, 0.4);
   font-size: Min(3.8vw, 20px);
   letter-spacing: 0.3px;
   line-height: 140%;
-  text-align: left;
+  text-align: center;
   transform: translateY(5px);
-  padding: 20px; /* Adjust the padding as needed */
-  border-radius: 10px; /* Adjust the border-radius for the desired level of rounding */
-  background-color: rgba(0, 0, 0, 0.7);
 }
 
 .heroCtaContainer {
   display: flex;
   flex-direction: row;
-  align-items: left;
+  align-items: center;
   gap: 16px;
 }
-
-.link {
-  text-decoration: none;
-  transition: all 0.15s ease-in-out;
-  font-weight: 600;
-}  
 
 .codeButton {
   display: flex;
