--- a/styles/guide.module.css
+++ b/styles/guide.module.css
@@ -129,14 +129,17 @@
 }
 
 .heroSubtitle {
-  max-width: 640px;
+  max-width: 840px;
   margin: 0 0 40px;
   color: hsla(0, 0%, 100%, 0.4);
   font-size: Min(3.8vw, 20px);
   letter-spacing: 0.3px;
   line-height: 140%;
-  text-align: center;
+  text-align: left;
   transform: translateY(5px);
+  padding: 20px; /* Adjust the padding as needed */
+  border-radius: 10px; /* Adjust the border-radius for the desired level of rounding */
+  background-color: rgba(0, 0, 0, 0.7);
 }
 
 .heroCtaContainer {
